k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zomato-service
spec:
  selector:
    app: zomato
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
